--- a/functions/package.json
+++ b/functions/package.json
@@ -12,11 +12,20 @@
     "node": "8"
   },
   "dependencies": {
+    "actions-on-google": "^2.12.0",
+    "body-parser": "^1.19.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0"
+    "firebase-functions": "^3.6.0",
+    "html-to-json": "^0.6.0",
+    "iconv-lite": "^0.5.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "express": "^4.17.1",
+    "firebase-functions-test": "^0.2.0",
+    "nodemon": "^2.0.3"
   },
   "private": true
 }
