--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "setup": "node setup/main.js"
   },
   "dependencies": {
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.2",
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
@@ -21,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "readline-sync": "^1.4.10",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
